--- a/src/components/page/glav/index.module.css
+++ b/src/components/page/glav/index.module.css
@@ -2473,8 +2473,8 @@
   background-color: #f7f7f7;
   overflow: hidden;
   flex-direction: column;
-  align-items: flex-end;
-  padding: var(--padding-2xl) 0 28px;
+  align-items: center;
+  padding: var(--padding-2xl) 0 -53px;
   box-sizing: border-box;
   gap: var(--gap-xl);
   line-height: normal;
