--- a/src/components/page/hotel/index.module.css
+++ b/src/components/page/hotel/index.module.css
@@ -234,14 +234,15 @@
   padding: var(--padding-10xs-5) 0 0;
 }
 .downIcon {
-  height: 24px;
-  width: 24px;
+  height: 22px;
+  width: 34px;
   position: relative;
   border-radius: var(--br-5xs);
   overflow: hidden;
   flex-shrink: 0;
   object-fit: contain;
-  min-height: 24px;
+  min-height: 11px;
+  top: 7px;
 }
 .frameGroup,
 .group,
@@ -263,6 +264,9 @@
 .group {
   gap: var(--gap-11xs);
   color: #3a544f;
+}
+.readMore{
+  color: #ff5733;
 }
 .logicBranch {
   gap: 13.5px;
@@ -6998,3 +7002,4 @@
   line-height: normal;
   letter-spacing: normal;
 }
+
