--- a/src/components/page/infokardplace/index.module.css
+++ b/src/components/page/infokardplace/index.module.css
@@ -204,7 +204,7 @@
   align-items: flex-end;
   padding: var(--padding-smi) 14.2px 9.1px var(--padding-sm);
   gap: 264px;
-  background-image: url(/public/glav/image@2x.png);
+  background-image: url(/public/glav/image-1@2x.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
